--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -252,6 +252,7 @@ jobs:
           echo "has_issues=$HAS_ISSUES" >> $GITHUB_OUTPUT
 
       - name: Build compact issues + tiny summary
+        shell: bash
         run: |
           set -euo pipefail
 
@@ -260,23 +261,23 @@ jobs:
           MAX_PER_RULE=10
           MAX_PER_FILE=5
           NON_TEST_ONLY=true
-          # De-noise: drop low-value spammy rules from the AI prompt (still counted in totals if you want)
-          RULE_BLOCKLIST='["java:S1604","java:S108"]'   # lambda-suggest + empty block spam
+          RULE_BLOCKLIST='["java:S1604","java:S108"]'   # de-noise spammy rules in prompt
           MAX_EXEMPLARS_PER_RULE=1
 
           # 1) Start from your existing issues.json
           jq -c '.' issues.json > _issues_raw.json
 
-          # 2) Optionally drop test files & blocklisted rules
-          FILTERED=$(jq -c \
-            --argjson block "$RULE_BLOCKLIST" \
-            --arg ntest "$NON_TEST_ONLY" '
-              . as $all
-              | [ $all[]
+          # 2) Optionally drop test files & blocklisted rules (jq 1.6-safe: use index() instead of IN())
+          FILTERED=$(
+            jq -c \
+              --argjson block "$RULE_BLOCKLIST" \
+              --arg ntest "$NON_TEST_ONLY" '
+                [ .[]
                   | select( ( ($ntest=="true") | not ) or (.component | test("^src/test/") | not) )
-                  | select( (.rule | IN($block[])) | not )
+                  | select( ($block | index(.rule)) == null )
                 ]
-            ' _issues_raw.json)
+              ' _issues_raw.json
+          )
 
           # 3) Priority sort: severity rank (BLOCKER>CRITICAL>MAJOR), then rule, then file:line
           SORTED=$(
@@ -286,24 +287,30 @@ jobs:
                 elif .severity=="CRITICAL" then 2
                 elif .severity=="MAJOR" then 1
                 else 0 end;
-              sort_by(- (rank), .rule, .component, (.line // 0))
+              sort_by([ - (rank), .rule, .component, (.line // 0) ])
             ' <<<"$FILTERED"
           )
 
-          # 4) Cap per-rule and per-file, then global cap
+          # 4) Cap per-rule and per-file, then global cap (wrap whole pipeline inside $())
           CAPPED=$(
             jq -c \
               --argjson maxRule "$MAX_PER_RULE" \
               --argjson maxFile "$MAX_PER_FILE" '
                 (group_by(.rule) | map(.[0:$maxRule]) | add) as $byRule
                 | ($byRule | group_by(.component) | map(.[0:$maxFile]) | add)
-              ' <<<"$SORTED"
+              ' <<<"$SORTED" \
             | jq -c --argjson m "$MAX_TOTAL_ISSUES" '.[0:$m]'
           )
+
+          # If empty/null, normalize to []
+          if [ -z "${CAPPED:-}" ] || ! jq -e . >/dev/null 2>&1 <<<"$CAPPED"; then
+            CAPPED='[]'
+          fi
+
           echo "$CAPPED" > issues_compact.json
           echo "Compact issue count: $(jq 'length' issues_compact.json)"
 
-          # 5) Tiny per-rule summary + 1 exemplar location per rule (for QUESTION_TEXT)
+          # 5) Tiny per-rule summary + 1 exemplar path per rule for QUESTION_TEXT
           jq -r --argjson k "$MAX_EXEMPLARS_PER_RULE" '
             group_by(.rule)
             | map({
@@ -316,40 +323,21 @@ jobs:
             | .[]
           ' issues_compact.json > question_summary.txt
 
-      - name: Send issues to Technical Debt Analyzer (size-aware)
-        id: flowise-analysis
+
+      - name: Send issues to Technical Debt Analyzer (compact + robust)
         env:
           FLOWISE_BEARER_TOKEN: ${{ secrets.FLOWISE_BEARER_TOKEN }}
         run: |
           set -euo pipefail
 
-          # ---- Tunables ----
-          MAX_SUMMARY_CHARS=20000
-          MAX_QUESTION_CHARS=32000
-          MAX_PAYLOAD_BYTES=180000       # final JSON size safety cap (~180 KB)
-          MAX_EXEMPLARS_PER_RULE=3       # if we switch to summary mode
-          # -------------------
+          # Tiny question text built from the summary file
+          BASE_HDR="You're analyzing SonarCloud issues from PR #${{ github.event.pull_request.number }} in '${{ github.repository }}' (owner: '${{ github.repository_owner }}'), targeting '${{ github.event.pull_request.head.ref }}'. Analyze duplicates once."
+          SUMMARY=$(tr '\n' '\\n' < question_summary.txt | head -c 14000)
+          QUESTION_TEXT="$BASE_HDR\\n\\n## Issue summary (by rule)\\n$SUMMARY"
 
-          ISSUES_JSON=$(cat issues.json)
+          # Use compact JSON
+          ISSUES_JSON=$(cat issues_compact.json)
           CHANGED_FILES=$(cat changed.json)
-
-          if [[ "$ISSUES_JSON" == "[]" ]]; then
-            echo '{"text": "No potential Technical Debt was detected in the current PR."}' > flowise_output.json
-            exit 0
-          fi
-
-          # Compact Markdown summary
-          SONAR_ISSUE_SUMMARY=$(jq -r '
-            .[] |
-            "### Rule: \(.rule)\n" +
-            "* Severity: \(.severity)\n" +
-            "* Location: \(.component):\(.line)\n" +
-            "* Message: \(.message)\n" +
-            (if .snippet then "* Snippet:*\\n```\\n\(.snippet)\\n```" else "" end) + "\n"
-          ' issues.json | sed ':a;N;$!ba;s/\n/\\n/g' | head -c "$MAX_SUMMARY_CHARS")
-
-          QUESTION_TEXT="You're analyzing SonarCloud issues from PR #${{ github.event.pull_request.number }} in '${{ github.repository }}' (owner: '${{ github.repository_owner }}'), targeting '${{ github.event.pull_request.head.ref }}'. If there are duplicates, analyze them once.\n\n## Sonar Issues (truncated)\n$SONAR_ISSUE_SUMMARY"
-          QUESTION_TEXT=$(printf "%s" "$QUESTION_TEXT" | head -c "$MAX_QUESTION_CHARS")
 
           make_payload () {
             jq -cn \
@@ -362,77 +350,25 @@ jobs:
           }
 
           PAYLOAD=$(make_payload "$ISSUES_JSON" "$CHANGED_FILES")
-          BYTES=$(printf '%s' "$PAYLOAD" | wc -c)
-          echo "Initial payload bytes: $BYTES"
 
-          # If still too big, progressively shrink:
-          shrink_once () {
-            local current="$1"
-            # 1) Drop snippets first (keep structure)
-            local no_snips
-            no_snips=$(echo "$current" | jq 'map(del(.snippet))')
-            echo "$no_snips"
-          }
-
-          if [ "$BYTES" -gt "$MAX_PAYLOAD_BYTES" ]; then
-            echo "Dropping snippets to fit budget…"
-            ISSUES_JSON=$(shrink_once "$ISSUES_JSON")
-            PAYLOAD=$(make_payload "$ISSUES_JSON" "$CHANGED_FILES")
-            BYTES=$(printf '%s' "$PAYLOAD" | wc -c)
-            echo "After dropping snippets: $BYTES bytes"
-          fi
-
-          # If *still* too big, switch to per-rule summary with a few exemplars
-          if [ "$BYTES" -gt "$MAX_PAYLOAD_BYTES" ]; then
-            echo "Switching to per-rule summary mode…"
-            SUMMARY_JSON=$(
-              jq -c --argjson k "$MAX_EXEMPLARS_PER_RULE" '
-                group_by(.rule)
-                | map({
-                    rule: .[0].rule,
-                    severityMode: (.[0].severity),
-                    count: length,
-                    exemplars: (.[0:$k] | map({component, line, message}))
-                  })
-              ' <<<"$ISSUES_JSON"
-            )
-
-            QUESTION_TEXT=$(
-              jq -r '
-                map(
-                  "### Rule: \(.rule) (" + (.count|tostring) + " hits, e.g.: " +
-                  ( .exemplars | map("\(.component):\(.line)") | join(", ") ) + ")\n"
-                ) | join("")
-              ' <<<"$SUMMARY_JSON"
-            )
-            QUESTION_TEXT=$(printf "Summarized by rule due to size.\n\n%s" "$QUESTION_TEXT" | sed ':a;N;$!ba;s/\n/\\n/g' | head -c "$MAX_QUESTION_CHARS")
-
-            # Replace issues with just the summary structure to *guarantee* small size
-            PAYLOAD=$(jq -cn \
-              --arg pr "${{ github.event.pull_request.number }}" \
-              --arg proj "${{ env.PROJECT_KEY }}" \
-              --arg question "$QUESTION_TEXT" \
-              --argjson summary "$SUMMARY_JSON" \
-              --argjson changedFiles "$CHANGED_FILES" \
-              '{question:$question, overrideConfig:{projectKey:$proj, prNumber:$pr, changedFiles:$changedFiles}, issuesSummary:$summary}')
-            BYTES=$(printf '%s' "$PAYLOAD" | wc -c)
-            echo "After summary mode: $BYTES bytes"
-          fi
-
-          # Final send
-          echo "======= DEBUG: FINAL PAYLOAD (sizes) ======="
-          echo "question bytes: $(printf '%s' "$QUESTION_TEXT" | wc -c)"
-          echo "payload bytes:  $BYTES"
-
-          RESPONSE=$(curl -s -X POST \
+          # Send with robust handling
+          RESP_BODY=flowise_output_raw.txt
+          HTTP_CODE=$(curl -sS -o "$RESP_BODY" -w "%{http_code}" \
             -H "Authorization: Bearer $FLOWISE_BEARER_TOKEN" \
             -H "Content-Type: application/json" \
+            -H "Accept: application/json" \
+            --max-time 55 \
+            --retry 2 --retry-delay 2 --retry-max-time 60 \
             -d "$PAYLOAD" \
             https://cloud.flowiseai.com/api/v1/prediction/ae8b5cb1-b90b-4f25-9395-a839e92e2bf6)
 
-          echo "$RESPONSE" > flowise_output.json
-
-
+          echo "HTTP status: $HTTP_CODE"
+          if [ "$HTTP_CODE" -ge 200 ] && [ "$HTTP_CODE" -lt 300 ] && jq -e . "$RESP_BODY" >/dev/null 2>&1; then
+            cp "$RESP_BODY" flowise_output.json
+          else
+            RAW=$(head -c 6000 "$RESP_BODY" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+            printf '{"text":"Flowise response issue (HTTP %s). Body (first 6KB):\\n```\\n%s\\n```"}' "$HTTP_CODE" "$RAW" > flowise_output.json
+          fi
 
       - name: Comment on PR
         uses: actions/github-script@v6
